recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: overloaded method value setX with alternatives:
  (i: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
     setX()
     ^Tree:14: error: overloaded method value setY with alternatives:
  (i: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
     setY()
     ^