recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
if (steps==0){
}else {
	getX()
	getY()
	current(steps)
	avance(length)
	droite(angle)
	tree(steps-1,length*shrink,angle,shrink)
	gauche(2*angle)
	tree(steps-1,length*shrink,angle,shrink)
     setX()
     setY()
}
}
